<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:orientation="vertical"
    android:padding="0dp"
    android:rowCount="6"
    android:textAlignment="center"
    tools:context=".MainActivity"
    >

    <EditText
        android:id="@+id/txtNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_columnWeight="1"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:text="@string/NumDisp"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_row="1"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn1"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/button2"
        android:layout_row="1"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn2"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/button3"
        android:layout_row="1"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn3"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/button4"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@android:color/darker_gray"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn4"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/button5"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@android:color/darker_gray"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn5"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/button6"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@android:color/darker_gray"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn6"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/button7"
        android:layout_row="2"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn7"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/button8"
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@android:color/darker_gray"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn8"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/button9"
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@android:color/darker_gray"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn9"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/button10"
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@android:color/darker_gray"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn10"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/button11"
        android:layout_row="3"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn11"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/button12"
        android:layout_row="4"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@android:color/darker_gray"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn12"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/button13"
        android:layout_row="4"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@android:color/darker_gray"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn13"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/button14"
        android:layout_row="4"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@android:color/darker_gray"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn14"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/button15"
        android:layout_row="4"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn15"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button19"
        android:layout_row="5"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@android:color/darker_gray"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn19"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/btn16"
        android:layout_row="5"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@android:color/darker_gray"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn16"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/button17"
        android:layout_row="5"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="2"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@color/design_default_color_error"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn17"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />

    <Button
        android:id="@+id/button18"
        android:layout_row="5"
        android:layout_rowSpan="1"
        android:layout_rowWeight="1"
        android:layout_column="3"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_margin="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:duplicateParentState="false"
        android:padding="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn18"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="normal"
        app:iconPadding="0dp" />


</GridLayout>